--- a/platformio.ini
+++ b/platformio.ini
@@ -7,13 +7,17 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+
 [platformio]
 default_envs = nano33iot
 
 [env]
 framework = arduino
 monitor_speed = 115200
-lib_deps = arduino-libraries/ArduinoBLE@^1.3.7
+lib_deps = 
+	arduino-libraries/ArduinoBLE@^1.3.7
+	adafruit/Adafruit AHRS@^2.3.6
+
 build_flags = 
 	-DVERSION='"v0.0.1"'
 
@@ -21,18 +25,18 @@ build_flags =
 platform = atmelsam
 board = nano_33_iot
 build_flags = 
-	${env.build_flags} 
+	${env.build_flags}
 	-DNANO_33_IOT=
 lib_deps = 
-	${env.lib_deps} 
+	${env.lib_deps}
 	arduino-libraries/Arduino_LSM6DS3@^1.0.3
 
 [env:nano33ble]
 platform = nordicnrf52
 board = nano33ble
 build_flags = 
-	${env.build_flags} 
+	${env.build_flags}
 	-DNANO_33_BLE=
 lib_deps = 
-	${env.lib_deps} 
+	${env.lib_deps}
 	arduino-libraries/Arduino_BMI270_BMM150@^1.2.1
